--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -73,3 +73,8 @@
     }
   }
 }
+@media (min-width: 769px) {
+  .menu {
+    display: none;
+  }
+}
